# taskpad-cli

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: bootAnimation.cpp.E410FA4D553A91A6.idx  bootAnimation.h.1F2ED61889A210C6.idx  main.cpp.2928C14DC165E963.idx  menu.cpp.52BD97905FA6ABD4.idx  menu.h.2F91F250A11023A5.idx  processingAnimation.cpp.FF8579FE08DF99D4.idx  processingAnimation.h.C5441DD03E9CCE1D.idx
assets/: sampleUI.md
src/: addTask.cpp  addTask.h  bootAnimation.cpp  bootAnimation.h  main.cpp  menu.cpp  processingAnimation.cpp  processingAnimation.h  taskData.h  test.cpp  userInput.cpp
